infrastructure/staging/ingress/dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ingressClassName: traefik
  rules:
    - host: dashboard.myfri09.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-kubernetes-dashboard-kong-proxy
                port:
                  number: 443
