infrastructure/staging/ingress/traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.myfri09.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
